# aerofootball

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.md  ball.cpp  ball.hpp  component.hpp  control_system.cpp  draw.cpp  engine.cpp  entity.cpp  entity.hpp  globals.cpp  globals.hpp  keyboard_state.hpp  main.cpp  mingw.cmake  player.cpp  player.hpp  point.cpp  point.hpp  position.hpp  size.hpp  texture.cpp  texture.hpp
cmake/: SDL.cmake  SDL_image.cmake  SDL_ttf.cmake
components/: ball.hpp  collider.cpp  collider.hpp  collision.cpp  collision.hpp  control.cpp  control.hpp  debug.cpp  debug.hpp  goal.cpp  goal.hpp  position.cpp  size.cpp  texture.cpp  velocity.cpp  velocity.hpp
events/: event_processor.hpp  goal.hpp
systems/: collision.cpp
